<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000f"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/req"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textViewCar" />

    <TextView
        android:id="@+id/textViewPol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/policy"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textViewReq" />

    <TextView
        android:id="@+id/textViewCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/museosans_300"
        android:text="@string/car"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatement"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museosans_500"
        android:text="@string/desc"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/textViewStatement"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatement"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/textViewStatement"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/textViewStatement"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/tick" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/gradient_button_background"
        android:backgroundTintMode="add"
        android:fontFamily="@font/museosans_500"
        android:text="@string/create"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>